--- a/new_digital_project/notebooks/811 Visualizations.Rmd
+++ b/new_digital_project/notebooks/811 Visualizations.Rmd
@@ -17,11 +17,12 @@ library(pals)
 library(grid)
 library(tidyverse)
 library(RColorBrewer)
+library(plotly)
 
 
 key_votes<- read.csv("C:/Users/bpbuc/Documents/Brandan's Stuff/_PhD Stuff/Dissertation Research/new_digital_project/clean_data/key_votes_new.csv")
 
-key_votes_79_88_list<- read.csv("C:/Users/bpbuc/Documents/Brandan's Stuff/_PhD Stuff/Dissertation Research/new_digital_project/clean_data/key_votes_79_88_list.csv")
+key_votes_79_88_list<- read.csv("C:/Users/bpbuc/Documents/Brandan's Stuff/_PhD Stuff/Dissertation Research/new_digital_project/clean_data/key_votes_79_90_list_v2.csv")
 
 Hall_all_members<- read.csv("C:/Users/bpbuc/Documents/Brandan's Stuff/_PhD Stuff/Dissertation Research/new_digital_project/raw_data/HSall_members.csv")
 
@@ -42,88 +43,72 @@ bb <- c(1, 5, 10, 15, 20)
 ll <- c("1", "5", "10", "15", "20+")
 
 key_votes %>%
-  filter(congress > 84) %>% 
+  filter(congress < 84) %>% 
   filter(party_code == "Democrat" |
            party_code ==  "Republican") %>% 
+  filter(chamber == "House") %>% 
   filter(cohort == "int") %>% 
   group_by(cohort, party_code, nominate_dim1, nominate_dim2, type) %>% 
   summarize(num = n()) %>% 
-  ggplot(aes(x= nominate_dim1, y= nominate_dim2, size = num, color = party_code)) + geom_point(alpha = .70) + 
+  ggplot(aes(x= nominate_dim1, y= nominate_dim2, size = num, color = party_code)) +
   facet_wrap(~type, labeller=labeller(type = label)) +
+  xlim(-1,1) + ylim(-1, 1) +
   geom_hline(yintercept = 0, linetype="dashed", color = "grey", size = 1) +
   geom_vline(xintercept = 0, linetype="dashed", color = "grey", size = 1) +
-  annotate("rect", xmin = 0.25, xmax = 1, ymin = 0, ymax = 0.75,
-           alpha = .2) +
-  labs(title = "Foreign Policy Support, 79th through 83rd Congress ",
+  geom_point(alpha = .3) + 
+  annotate("rect", xmin = 0.35, xmax = 1, ymin = 0, ymax = 0.75,
+           alpha = .3) +
+  labs(title = "Cold War Policy Support, 79th through 83rd Congress ",
        subtitle = "By U.S. House Representative, Party, and Bill Type ",
        color = "Party",
-       x = "<- Liberal      Economic/Redistributive      Conservative->",
-       y = "<- Liberal      Social Policy      Conservative->") +
+       x = "← Liberal      Economic/Redistributive      Conservative →",
+       y = "← Liberal      Social Policy      Conservative →") +
   scale_color_manual(labels = c("Democrat", "Republican"),
                      values = c("blue", "red")) +
   scale_size_continuous(name = "Yay Votes",
                         breaks = bb,
                         labels = ll) +
-  theme_bw(base_size = 25) +
-  guides(color = guide_legend(override.aes = list(size=5))) #I increased the size so the text was larger when exported as a jpeg
+  theme_bw(base_size = 20) +
+  theme(legend.position="bottom", legend.box = "horizontal",
+        legend.title = element_text(size=15, color = "Black", face="bold")) +
+  guides(color = guide_legend(override.aes = list(size=4.5)))
+         
 ```
+
 
 ```{r}
 
-bill_total<- key_votes_79_88_list %>%
-  filter(congress < 84) %>% 
-  group_by(congress, type) %>% 
-  summarize(number = n())
-
-
-key_votes %>%
-  filter(party_code ==  "Republican") %>%
-  filter(congress < 84) %>% 
-  group_by(cohort, congress, party_code, type) %>%
-  summarize(vote = n()) %>% 
-  left_join(bill_total, by = c("congress", "type")) %>% 
-  mutate(avg = vote / number) %>% 
-  ggplot(aes(x= congress, y= avg, color = cohort)) + geom_point(size= 3) + geom_line(size= 1) +      facet_wrap(~type, labeller=labeller(type = label)) +
-  labs(title = "Voting Patterns of Republican Representatives",
-       subtitle = "By Type and Vote, 79th - 83rd Congress",
-       color = "Vote Type",
-       x = "Congress",
-       y = "Average Vote Total Per Bill") +
-  scale_color_manual(labels = c("Support", "Opposition", "Noncommitted"),
-                     values = c("green", "red", "orange"))+
-  theme_bw() +
-   theme_bw(base_size = 25) +
-  guides(color = guide_legend(override.aes = list(size=2)))
-
-```
-
-For comparison purposes I decided to include the same plot but with the Democratic party. I am not sure if I will include in the paper, but it does illustrate that the Dems, by comparison supported the full suite of Cold War legislation.
-
-```{r}
 bill_total<- key_votes_79_88_list %>% 
+  filter(chamber == "House") %>% 
   group_by(congress, type) %>% 
   summarize(number = n())
 
+pal<- c("#33a532", "#cf142b", "#f7b500")
 
 key_votes %>%
-  filter(party_code ==  "Democrat") %>%
-  filter(congress < 85) %>% 
-  group_by(cohort, congress, party_code, type) %>%
+  filter(party_code == "Republican") %>%
+  filter(chamber == "House") %>% 
+  filter(congress < 84) %>% 
+  group_by(cohort, congress, type) %>%
   summarize(vote = n()) %>% 
   left_join(bill_total, by = c("congress", "type")) %>% 
   mutate(avg = vote / number) %>% 
-  ggplot(aes(x= congress, y= avg, color = cohort)) + geom_point(size= 2) + geom_line(size= 0.5) + facet_wrap(~type, labeller=labeller(type = label)) +
-  labs(title = "Voting Patterns by Democratic Representatives",
-       subtitle = "By Type and Vote",
-       color = "Vote Type",
+  ggplot(aes(x= congress, y= avg, color = cohort)) + geom_point(size= 3) + geom_line(size= 1) +      
+  facet_wrap(~type, labeller=labeller(type = label)) +
+  labs(title = "Voting Patterns of Republican Party on Cold War Policy",
+       subtitle = "79th to 83rd Congresses, by Type and Vote",
+       color = "Cohort",
        x = "Congress",
        y = "Average Vote Total Per Bill") +
-  scale_color_manual(labels = c("Support", "Opposition", "Noncommitted"),
-                     values = c("green", "red", "orange"))+
-  theme_bw() 
-
+  scale_color_manual(values = pal,
+                     labels = c("Support", "Opposition", "Noncommitted")) +
+  theme_bw(base_size = 20) +
+  theme(legend.position="bottom", legend.box = "horizontal",
+        legend.title = element_text(size=15, color = "Black", face="bold")) +
+  guides(color = guide_legend(override.aes = list(size=1.5)))
 
 ```
+
 
 Vote on the Eisenhower Doctrine (85 H.J.Res. 117). One of the key foreign policy votes prior to the Gulf of Tonkin Resolution. I intend to use this plot to argue that under certain conditions, the Old Isolationists were still prone to vote against measures which vested power within the executive, even, in as in this case if POTUS is of the same party. The plot also illustrates that Republican opposition, was, with a few exceptions clustered on the party’s right wing.  
 
@@ -134,21 +119,58 @@ key_votes %>%
   filter(congress == "85") %>% 
   filter(rollnumber == "3") %>%
   ggplot(aes(x= nominate_dim1, y= nominate_dim2, color = cohort, shape = party_code)) + 
-  geom_point(size = 2, alpha = .7) +
   geom_hline(yintercept = 0, linetype="dashed", color = "grey", size = 1) +
   geom_vline(xintercept = 0, linetype="dashed", color = "grey", size = 1) +
+  geom_point(size = 4, alpha = .7) +
   labs(title = "House Vote on the Eisenhower Doctrine (85 H.J.Res. 117)",
        subtitle = "By Party and Vote",
-       color = "Cohort",
+       color = "Vote",
        shape = "Party",
-       x = "<- Liberal      Economic/Redistributive      Conservative->",
-       y = "<- Liberal      Social Policy      Conservative->") +
+       x = "← Liberal      Economic/Redistributive      Conservative→",
+       y = "← Liberal      Social Policy      Conservative→") +
   scale_color_manual(labels = c("Yay", "Nay", "No Vote"),
-                     values = c("green", "red", "orange"))+
-  theme_bw(base_size = 25) 
+                     values = pal)+
+  theme_bw(base_size = 20) +
+  theme(legend.position="bottom", legend.box = "horizontal",
+        legend.title = element_text(size=15, color = "Black", face="bold")) +
+  guides(color = guide_legend(override.aes = list(size=7)),
+         shape = guide_legend(override.aes = list(size=7)))
 
 ```
-I intend to use this plot to show how Republican opposition to foreign aid grew as the LBJ administration  wore on.
+
+
+This plot of the voting pattern on the Foreign Assistance Act of 1961 (87 H.R. 8400) is useful because it is a pivotal piece of legislation that enables the U.S. governments nonmilitary aid throughout the 1960s. The plot establishes rough base line which shows the majority of opposition existed on the right. The plot is also useful when juxtaposed with…
+
+```{r}
+
+key_votes %>% 
+  filter(congress == "87") %>% 
+  filter(bill_no == "HR8400") %>% 
+  ggplot(aes(x= nominate_dim1, y= nominate_dim2, color = cohort, shape = party_code)) + 
+  geom_hline(yintercept = 0, linetype="dashed", color = "grey", size = 1) +
+  geom_vline(xintercept = 0, linetype="dashed", color = "grey", size = 1) +
+  geom_point(size = 4, alpha = .7) +
+    annotate("rect", xmin = 0.35, xmax = 1, ymin = -0.35, ymax = 0.5,
+           alpha = .3) +
+  labs(title = "House Vote on Foreign Assistance Act of 1961 (87 H.R. 8400)",
+       subtitle = "By Party and Vote",
+       color = "Vote",
+       shape = "Party",
+       x = "← Liberal      Economic/Redistributive      Conservative→",
+       y = "← Liberal      Social Policy      Conservative→") +
+  scale_color_manual(labels = c("Yay", "Nay", "No Vote"),
+                     values = pal)+
+  theme_bw(base_size = 20) +
+  theme(legend.position="bottom", legend.box = "horizontal",
+        legend.title = element_text(size=15, color = "Black", face="bold")) +
+  guides(color = guide_legend(override.aes = list(size=7)),
+         shape = guide_legend(override.aes = list(size=7)))
+
+
+
+```
+
+...the trend of eroding support for foreign aid projects on the GOP’s moderate and left wings, and the small but evergreen opposition for such programs on the Republican right. The line graph also helps to set up…
 
 ```{r}
 econ_year<- key_votes_79_88_list %>% 
@@ -157,51 +179,63 @@ econ_year<- key_votes_79_88_list %>%
   summarize(number = n())
 
 key_votes %>%
-  filter(party_code == "Democrat" |
-           party_code ==  "Republican") %>%
+  filter(party_code ==  "Republican") %>%
   filter(type == "econ") %>% 
-  group_by(cohort, congress, party_code) %>%
+  group_by(cohort, congress, wing) %>%
   summarize(vote = n()) %>% 
   left_join(econ_year, by = "congress") %>% 
   mutate(avg = vote / number) %>% 
-  ggplot(aes(x= congress, y= avg, color = cohort)) + geom_point(size= 2) + geom_line(size= 0.5) + facet_wrap(~party_code) +
-  labs(title = "Foreign Aid Votes the House of Representatives",
-       subtitle = "By Party and Vote Type",
-       color = "Vote Type",
+  ggplot(aes(x= congress, y= avg, color = cohort)) + geom_point(size= 3) + geom_line(size= 1) +
+  facet_wrap(~wing) +
+  labs(title = "House Republican Intraparty Voting Trends on Foreign Aid",
+       subtitle = "79th to 90th Congresses by Party and Vote",
+       color = "Cohort",
        x = "Congress",
        y = "Average Vote Total Per Bill") +
   scale_color_manual(labels = c("Support", "Opposition", "Noncommitted"),
-                     values = c("green", "Red", "orange"))+
-  theme_bw() 
+                     values = pal)+
+    theme_bw(base_size = 20) +
+  theme(legend.position="bottom", legend.box = "horizontal",
+        legend.title = element_text(size=15, color = "Black", face="bold")) +
+  guides(color = guide_legend(override.aes = list(size=1.5)))
 
 ```
-
-This plot of the voting pattern on the Foreign Assistance Act of 1961 (87 H.R. 8400) is useful because it establishes rough base line which is useful to juxtapose with… 
 
 ```{r}
+bill_total<- key_votes_79_88_list %>% 
+  filter(chamber == "House") %>% 
+  group_by(congress, type) %>% 
+  summarize(number = n())
 
-key_votes %>% 
-  filter(congress == "87") %>% 
-  filter(bill_no == "HR8400") %>% 
-  ggplot(aes(x= nominate_dim1, y= nominate_dim2, color = cohort, shape = party_code)) + 
-  geom_point(size = 5, alpha = .7) +
-  geom_hline(yintercept = 0, linetype="dashed", color = "grey", size = 1) +
-  geom_vline(xintercept = 0, linetype="dashed", color = "grey", size = 1) +
-  labs(title = "House Vote on Foreign Assistance Act of 1961 (87 H.R. 8400)",
-       subtitle = "By Party and Vote",
-       color = "Vote",
-       shape = "Party",
-       x = "<- Liberal      Economic/Redistributive      Conservative->",
-       y = "<- Liberal      Social Policy      Conservative->") +
-  scale_color_manual(labels = c("Yay", "Nay", "No Vote"),
-                     values = c("green", "red", "orange"))+
-  theme_bw(base_size = 25) 
+pal<- c("#33a532", "#cf142b", "#f7b500")
 
-
-
+key_votes %>%
+  filter(party_code == "Democrat" |
+         party_code == "Republican") %>% 
+  filter(chamber == "House") %>% 
+  filter(type == "econ") %>% 
+  filter(reverse_vote == "N") %>% 
+  group_by(cohort, congress, party_code, type) %>%
+  summarize(vote = n()) %>% 
+  left_join(bill_total, by = c("congress", "type")) %>% 
+  mutate(avg = vote / number) %>% 
+  ggplot(aes(x= congress, y= avg, color = cohort)) + geom_point(size= 3) + geom_line(size= 1) +      
+  facet_wrap(~party_code, labeller=labeller(type = label)) +
+  labs(title = "House Voting Patterns on Foreign Aid ",
+       subtitle = "79th to 90th Congresses by Party and Vote",
+       color = "Cohort",
+       x = "Congress",
+       y = "Average Vote Total Per Bill") +
+  scale_color_manual(values = pal,
+                     labels = c("Support", "Opposition", "Noncommitted")) +
+  theme_bw(base_size = 20) +
+  theme(legend.position="bottom", legend.box = "horizontal",
+        legend.title = element_text(size=15, color = "Black", face="bold")) +
+  guides(color = guide_legend(override.aes = list(size=1.5)))
 ```
 
-...the House Vote to Recommit the Foreign Assistance Act of 1968 (87 S. 2996). These two plots show the Republican revolt over foreign aid which occurred during the late 1960s. The plot also depicts the means of that revolt, moderate and left wing Republicans, along with some Democrats who defected to cut foreign aid spending.
+
+...the House Vote to Recommit the Foreign Assistance Act of 1968 (87 S. 2996). These two plots show the Republican began to push back on foreign aid programs, primarily over their costs. The Foreign Assistance Act of 1968 would be the lowest of the decade. The plot also depicts the means of that revolt, moderate and left-wing Republicans, along with some Democrats who defected to cut foreign aid spending. I also intend to use these two plots to set up my readers...to give them hope and promptly dash it... 
 
 ```{r}
 
@@ -209,18 +243,54 @@ key_votes %>%
   filter(congress == "90") %>% 
   filter(rollnumber == "390") %>%
   ggplot(aes(x= nominate_dim1, y= nominate_dim2, color = cohort, shape = party_code)) + 
-  geom_point(size = 2, alpha = .7) +
+  xlim(-1,1) + ylim(-1, 1) +
   geom_hline(yintercept = 0, linetype="dashed", color = "grey", size = 1) +
   geom_vline(xintercept = 0, linetype="dashed", color = "grey", size = 1) +
-  labs(title = "House Vote to Recommit the Foreign Assistance Act of 1968 (87 S. 2996)",
+  geom_point(size = 4, alpha = .7) +
+  labs(title = "House Recommit Vote on the Foreign Assistance Act of 1968 (90 H.R. 15263)",
        subtitle = "By Party and Vote",
-       color = "Cohort",
+       color = "Vote",
        shape = "Party",
-       x = "<- Liberal      Economic/Redistributive      Conservative->",
-       y = "<- Liberal      Social Policy      Conservative->") +
+       x = "← Liberal      Economic/Redistributive      Conservative →",
+       y = "← Liberal      Social Policy      Conservative →") +
   scale_color_manual(labels = c("Yay", "Nay", "No Vote"),
-                     values = c("green", "red", "orange")) +
-  theme_bw()
+                     values = pal) +
+  theme_bw(base_size = 20) +
+  theme(legend.position="bottom", legend.box = "horizontal",
+        legend.title = element_text(size=15, color = "Black", face="bold")) +
+  guides(color = guide_legend(override.aes = list(size=7)),
+         shape = guide_legend(override.aes = list(size=7)))
+
+```
+
+Two months after the Foreign Assistance Act of 1968 vote, congress voted to approve the Foreign Military Sales Act (https://voteview.com/rollcall/RH0900419). The act, as the title indicates made available military aid to a host of countries. Because it pertained to military rather than civilian aid, it enjoyed considerably more support. The bill also, ironically, contained provisions for arms control, which likely gained it some support. The act passed the house by a vote of 313-29 in the House and passed by voice vote in the Senate.
+
+```{r}
+key_votes %>% 
+  filter(congress == "90") %>% 
+  filter(rollnumber == "419") %>%
+  ggplot(aes(x= nominate_dim1, y= nominate_dim2, color = cohort, shape = party_code)) + 
+  xlim(-1,1) + ylim(-1, 1) +
+  geom_hline(yintercept = 0, linetype="dashed", color = "grey", size = 1) +
+  geom_vline(xintercept = 0, linetype="dashed", color = "grey", size = 1) +
+  geom_point(size = 4, alpha = .7) +
+  labs(title = "House Vote on the  Foreign Military Sales Act (90 H.R. 15681)",
+       subtitle = "By Party and Vote",
+       color = "Vote",
+       shape = "Party",
+       x = "← Liberal      Economic/Redistributive      Conservative →",
+       y = "← Liberal      Social Policy      Conservative →") +
+  scale_color_manual(labels = c("Yay", "Nay", "No Vote"),
+                     values = pal) +
+  theme_bw(base_size = 20) +
+  theme(legend.position="bottom", legend.box = "horizontal",
+        legend.title = element_text(size=15, color = "Black", face="bold")) +
+  guides(color = guide_legend(override.aes = list(size=1.5))) +
+  theme_bw(base_size = 20) +
+  theme(legend.position="bottom", legend.box = "horizontal",
+        legend.title = element_text(size=15, color = "Black", face="bold")) +
+  guides(color = guide_legend(override.aes = list(size=7)),
+         shape = guide_legend(override.aes = list(size=7)))
 
 ```
 
